--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -25,10 +25,10 @@ jobs:
           node-version: 'latest'
       
       - name: Download packages
-        run: npm install --production --always-auth
+        run: yarn install --production
 
       - name: Build
-        run: npm run build
+        run: yarn run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
