--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vitejs/plugin-vue": "^5.0.5",
     "axios": "^1.7.2",
     "casket-star": "^0.0.17",
     "element-plus": "^2.7.6",
-    "vue": "^3.4.29"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
+    "vue": "^3.4.29",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
   },
